--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,29 @@
 @import "~bootstrap/scss/bootstrap";
+
+header {
+    .my-header {
+        .logo {
+            height: 50px;
+            width: 50px;
+        }
+
+        ul {
+            list-style: none;
+
+            li {
+                a {
+                    display: inline-block;
+                    text-decoration: none;
+                    font-size: 1.1rem;
+                    font-weight: bold;
+                    margin-left: 15px;
+                    color: gray;
+
+                    &:hover {
+                        color: blue;
+                    }
+                }
+            }
+        }
+    }
+}
